# old-rustorm

./: .gitignore  .project  .travis.yml  Cargo.toml  Changelog.md  Contributors.md  LICENSE  MySQL.md  Notes.md  Progress.md  README.md  Sqlite.md  TODO.md  \  appveyor.yml  build.rs  file.db  file1.db  search-index.js  update-docs.sh
examples/: adempiere.rs  adempiere_window_intel.rs  build_insert_query.rs  build_insert_query_debug.rs  complex_inner_join.rs  complex_query.rs  complex_query_compact.rs  complex_query_debug.rs  delete_category.rs  delete_product.rs  derive_test.rs  dispatched_fluent_query.rs  em_delete.rs  em_get_all.rs  em_get_all_sqlite.rs  em_insert.rs  em_insert_sqlite.rs  em_update.rs  flex_fluent_query.rs  formal_flex_fluent_query.rs  formal_usage.rs  gen.rs  generate_adempiere380_code.rs  generate_adempiere_code.rs  generate_all_source_code.rs  generate_model_code.rs  generate_model_code_for_test.rs  get_exact_one_product.rs  get_exact_record.rs  get_one_photo_of_product_fluently.rs  get_one_product.rs  get_one_product_fluently.rs  get_one_product_photo.rs  get_product_enumerated_columns_only.rs  insert_category.rs  insert_category_with_return.rs  is_table.rs  keyword.rs  macro.rs  multiple_dispatch.rs  (+65 more)
examples/errors/: example_em.rs  example_insert_sql.rs  example_insert_sql_returning.rs  example_product.rs  example_product_filter.rs  example_product_ignore_columns.rs  example_query_filter.rs  example_query_filter_with_join_group_order.rs  example_select_all.rs  example_url_parse.rs  get_only_name_of_product.rs  insert_dao.rs  test_query.rs  test_query_table_context.rs  test_query_update.rs  test_table.rs
examples/old/: flex_query.rs  generate_model_code.rs  get_exact_one_product.rs  get_one_product.rs  multiple_dispatch.rs  play_uuid_base64.rs  pooled_connection.rs  show_all_product.rs  show_all_product_fluently.rs
examples/sqlite/: play_sqlite.rs  sqlite_insert.rs
resources/: mariadb_keywords.txt  mysql5.0_keywords.txt  oracle_keywords.txt  postgresql9.4_math_functions.txt  postgresql_9.4_keywords.txt  sqlite3_keywords.txt
rustorm/: index.html  sidebar-items.js
rustorm-derive/: Cargo.toml
rustorm-derive/src/: lib.rs
rustorm/config/: index.html  sidebar-items.js  struct.DbConfig.html
rustorm/dao/: enum.Type.html  enum.Value.html  (+9 more)
scripts/: bazaar_v5_dump_schema.sql  bazaar_v6_all.sql  bazaar_v6_dump_schema.sql  bazaar_v8_all.sql  bazaar_v8_dump_schema.sql  dump_all.sh  dump_data.sh  dump_schema.sh  sample.sql  setup.bat  setup.sh
src/: codegen.rs  config.rs  dao.rs  database.rs  db.rs  em.rs  entity.rs  filter.rs  join.rs  lib.rs  lookup.rs  main.rs  meta.rs  model.rs  pool.rs  query.rs  sample_lookup.rs  sql.rs  table.rs  types.rs  window.rs  writer.rs
tests/: build_insert_query.rs  lib.rs  simple_test.rs  test_complex_query.rs  test_crud.rs  test_delete_query.rs  test_filter_eq.rs  test_from_multiple_tables.rs  test_group_by.rs  test_having.rs  test_inner_query.rs  test_insert_query.rs  test_left_join.rs  test_multiple_rename_table.rs  test_order_by.rs  test_pool.rs  test_simple.rs  test_update_query.rs
unused/: build_insert_query.rs  complex_inner_join.rs  complex_query_compact.rs  complex_query_debug.rs  dao.rs  delete_category.rs  filter.rs  fluent  fluent.rs  fluent_query.rs  fn_product.rs  foo.rs  get_exact_record.rs  get_one_product_photo.rs  insert_category.rs  mysql_insert_product.rs  mysql_show_product.rs  mysql_show_version.rs  renamed_columns.rs  show_all_product.rs  show_one_product.rs  simple_test.rs  sql.rs  sqlite_insert_product.rs  sqlite_meta.rs  sqlite_show_product.rs  sqlite_show_version.rs  test_filter_eq.rs
(+141 files in other folders)
