[package]
name = "rustorm"
version = "0.4.2"
authors = [ "Jovansonlee Cesar <ivanceras@gmail.com>" ]
license = "MIT"
description = "An ORM for rust"
readme = "README.md"
repository = "https://github.com/ivanceras/rustorm"
documentation = "https://ivanceras.github.io/rustorm/rustorm/"
keywords = ["orm", "database", "sql"]

[lib]
name = "rustorm"

[features]
default = ["mysql"]
sqlite = ["rusqlite","r2d2_sqlite"]

[dependencies.chrono]
version = "0.2.16"
features = ["rustc-serialize"]

[dependencies.postgres]
version = "0.10.1"
features = ["time", "uuid", "chrono", "rustc-serialize"]


[dependencies]
rustc-serialize = "0.3.16"
serde_json = "0.6.0"
uuid = "0.1.18"
log = "0.3.4"
env_logger = "0.3.2"
regex = "0.1.44"
url = "0.2.38"
time = "0.1.34"
r2d2 = "0.6.1"
r2d2_postgres = "0.9.3"
rusqlite = { version = "0.6.0", optional = true }
mysql = {version = "1.2.0", optional = true }

[dependencies.r2d2_sqlite]
version = "0.0.4"
optional = true
#path = "../r2d2-sqlite"
