[package]
name = "rustorm"
version = "0.5.6"
authors = [ "Jovansonlee Cesar <ivanceras@gmail.com>" ]
license = "MIT"
description = "An ORM for rust"
readme = "README.md"
repository = "https://github.com/ivanceras/rustorm"
documentation = "https://ivanceras.github.io/rustorm/rustorm/"
keywords = ["orm", "database", "sql"]

[lib]
name = "rustorm"

[features]
sqlite = ["rusqlite","r2d2_sqlite"]

[dependencies.chrono]
version = "0.2"
features = ["rustc-serialize"]

[dependencies.postgres]
version = "0.11"
features = ["rustc-serialize", "uuid", "chrono"]


[dependencies]
rustc-serialize = "0.3"
serde_json = "0.7"
uuid = {version = "0.3", features = ["serde", "rustc-serialize"] }
log = "0.3"
env_logger = "0.3"
regex = "0.1"
url = "1.1"
time = "0.1"
r2d2 = "0.7"
r2d2_postgres = "0.10"
rusqlite = { version = "0.7", optional = true }
mysql = {version = "1.2", optional = true }
r2d2_sqlite = {version = "0.1", optional = true}
